--- a/zk-verifier/Cargo.toml
+++ b/zk-verifier/Cargo.toml
@@ -6,9 +6,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-group = { version = "0.12", default-features = false }
+# group = { version = "0.12", default-features = false }
 # pairing = { version = "0.22", default-features = false }
-pairing = {package = "pairing_ce", version = "0.28.*", default-features = false }
+# pairing = {package = "pairing_ce", version = "0.28.*", default-features = false }
+pairing_ce = { git = "https://github.com/atsupontio/pairing.git", default-features = false }
 codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
 	"derive",
 ] }
